--- a/admin.html
+++ b/admin.html
@@ -11,6 +11,15 @@
         border-collapse: collapse;
         width: 100%;
     }
+  th, td {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
 </style>
 <body>
   <div style="display: flex; justify-items: center; gap: 20px; place-items: center; ">
